# upx

./: .appveyor.yml  .circle.yml  .clang-format  .clang-tidy  .clangd  .cvsignore  .editorconfig  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  .hgignore  .hgtags  .travis.yml  .travis_build.sh  BUGS  CMakeLists.txt  COPYING  Makefile  NEWS  NEWS.md  PROJECTS  README  README.1ST  README.SRC  THANKS  TODO  circle.yml  compile_flags.txt  upx-win-install.inf  upx.sln
.ci/: travis_build.sh  travis_init.sh  travis_testsuite.sh
.github/: CODEOWNERS  ISSUE_TEMPLATE.md  dependabot.yml  pull_request_template.md  security.md  travis_build.sh  travis_deploy.sh  travis_init.sh  travis_testsuite.sh  travis_testsuite_1-expected_sha256sums.sh  travis_testsuite_1.sh  travis_testsuite_2.sh  typos_config.toml  upx-automatic-builds@github.com.enc
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci-build-linux.yml  ci.yml  close-stale-issues.yml  codeql-analysis.yml  github-close-inactive-issues.yml  github-close-pull-requests.yml  minimal-ci.yml  misc-spell-check.yml  nopr.yml  scan-build.yml  spell-check.yml  static-analyzer-clang-analyzer.yml  static-analyzer-clang-tidy.yml  static-analyzer-clang.yml  static-analyzer-codeql.yml  test-alpine-linux.yml  test-cmake-default.yml  test-minimal-alpine-linux.yml  test-minimal-alpinelinux.yml  test-minimal-chimera-linux.yml  test-minimal-chimeralinux.yml  test-unused.yml  test-yaml-check.yml  weekly-ci-alpine-linux.yml  weekly-ci-alpine.yml  weekly-ci-bs-by-hand.yml  weekly-ci-bs-cmake-macos-xcode.yml  weekly-ci-bs-cmake-windows-make.yml  weekly-ci-bs-cmake-windows-ninja.yml  weekly-ci-bs-cmake-windows-nmake.yml  weekly-ci-bs-misc.yml  weekly-ci-cc-alpine-linux.yml  weekly-ci-cc-alpine-mingw.yml  weekly-ci-cc-llvm-mingw.yml  weekly-ci-cc-zigcc.yml  weekly-ci-cmake-macos-xcode.yml  weekly-ci-cmake-windows-nmake.yml  weekly-ci-llvm-mingw.yml  weekly-ci-macos-cmake-xcode.yml  weekly-ci-rt-checkers.yml  (+2 more)
doc/: .gitignore  BUGS.txt  Makefile  THANKS.txt  elf-to-mem.txt  filter.txt  loader.txt  selinux.txt  upx-doc.html  upx-doc.txt  upx.1  upx.pod
fuzz/: README.md  build.sh  get_corpus.sh  unpacker_fuzzer.cpp
misc/analyze/clang-tidy/: clang-tidy-bzip2.yml  clang-tidy-ucl.yml  clang-tidy-zlib.yml  clang-tidy-zstd.yml  run-clang-tidy.py
misc/cmake/: functions.cmake
misc/cmake/try_compile/: std_lock_guard.cpp
misc/cross-compile-upx-with-podman/: 10-create-image.sh  11-list-packages.sh  20-image-run-shell.sh  30-list-packages.sh  Dockerfile  build-all-inside-container.sh  packages.txt
misc/make/: Makefile-extra.mk
misc/podman/cross-compile-upx-ubuntu/: 10-create-image.sh  20-image-run-shell.sh  Dockerfile  build-all-inside-container.sh  packages.txt
misc/podman/rebuild-stubs/: 10-create-image.sh  20-image-run-shell.sh  Dockerfile  packages.txt
misc/podman/test-qemu/: README.md
misc/rebuild-stubs-with-podman/: 10-create-image.sh  11-list-packages.sh  20-image-run-shell.sh  30-list-packages.sh  Dockerfile  packages.txt
misc/scripts/: build_upx_by_hand.sh  check_whitespace.sh  check_whitespace_git.sh  run-clang-tidy.py  run_cmake_config.sh  upx-clang-format  upx-clang-format.sh
misc/test-qemu-with-podman/: README.md
misc/testsuite/: mimic_ctest.sh  test_symlinks.sh  upx_testsuite_1-expected_sha256sums.sh  upx_testsuite_1.sh
misc/valgrind/: musl.supp
patches/: patch-elfcode.h
scripts/: cvs2cl.pl
src/: .cvsignore  .gitignore  MAX_ELF_HDR.cpp  Makedefs.dep  Makedefs.gcc  Makedefs.inc  Makedefs.upx  Makefile  Makefile.bld  Makefile.dep  Makefile.inc  bele.h  bele_policy.h  bptr.h  c_file.cpp  c_init.cpp  c_none.cpp  c_screen.cpp  compress.ch  compress.cpp  compress.h  compress_lzma.cpp  compress_ucl.cpp  compress_zlib.cpp  compress_zstd.cpp  conf.h  console.h  dt_check.cpp  except.cpp  except.h  fcto_ml.ch  fcto_ml2.ch  fcto_ml3.ch  file.cpp  file.h  filter.cpp  filter.h  filteri.cpp  headers.h  help.cpp  (+111 more)
src/acc/: .cvsignore  acc.h  acc_arch.h  acc_auto.h  acc_cc.h  acc_chk.ch  acc_chkr.ch  acc_cxx.h  acc_defs.h  acc_incd.h  acc_ince.h  acc_inci.h  acc_init.h  acc_lib.ch  acc_lib.h  acc_mm.h  acc_os.h  acc_type.h
src/check/: dt_check.cpp  dt_cxxlib.cpp  dt_impl.cpp  dt_xspan.cpp  dtx_boost_pfr.cpp  dtx_rangeless.cpp
src/compress/: compress.cpp  compress.h  compress_bzip2.cpp  compress_lzma.cpp  compress_ucl.cpp  compress_zlib.cpp  compress_zstd.cpp
src/config_h/: linux.h  sparc_sun_solaris28.h
src/console/: c_file.cpp  c_init.cpp  c_none.cpp  c_screen.cpp  console.h  s_djgpp2.cpp  s_object.cpp  s_vcsa.cpp  s_win32.cpp  screen.h
src/filter/: ct.h  ctjo.h  ctjor.h  cto.h  ctoj.h  ctojr.h  ctok.h  ctsw.h  filter_impl.cpp  getcto.h  ppcbxx.h  sub.h  sub.hh  sub16.h  sub32.h  sub8.h  sw.h
src/stub/: .cvsignore  .gitignore  Makefile  a_lx_elf64.c  amd64-darwin.dylib-entry.h  amd64-darwin.macho-entry.h  amd64-darwin.macho-fold.h  amd64-darwin.macho-upxmain.h  amd64-linux.elf-entry.h  amd64-linux.elf-fold.h  amd64-linux.elf-so_entry.h  amd64-linux.elf-so_fold.h  amd64-linux.kernel.vmlinux-head.h  amd64-linux.kernel.vmlinux.h  amd64-linux.kernel.vmlinuz.h  amd64-linux.shlib-init.h  amd64-win64.pe.h  amd64-win64.pep.h  amd_bxx.S  amd_d_nrv2b.S  amd_d_nrv2e.S  amd_regs.h  arm-darwin.macho-entry.h  arm-darwin.macho-fold.h  arm-linux.elf-entry.h  arm-linux.elf-fold.h  arm-linux.kernel.vmlinux-head.h  arm-linux.kernel.vmlinux.h  arm-linux.shlib-init.h  arm.v4a-linux.elf-entry.h  arm.v4a-linux.elf-fold.h  arm.v4a-linux.elf-so_entry.h  arm.v4a-linux.elf-so_fold.h  arm.v4a-win32.pe.h  arm.v4a-wince.pe.h  arm.v4t-win32.pe.h  arm.v4t-wince.pe.h  arm.v5a-darwin.macho-entry.h  arm.v5a-darwin.macho-fold.h  arm.v5a-linux.elf-entry.h  (+222 more)
src/util/: bptr.h  cxxlib.h  dt_check.cpp  dt_impl.cpp  membuffer.cpp  membuffer.h  miniacc.h  raw_bytes.h  snprintf.cpp  snprintf.h  system_defs.h  system_features.h  system_headers.h  util.cpp  util.h  windows_lean.h  xspan.cpp  xspan.h  xspan_fwd.h  xspan_impl.h  xspan_impl_common.h  xspan_impl_ptr.h  xspan_impl_ptr_or_null.h  xspan_impl_ptr_or_span.h  xspan_impl_span.h
(+647 files in other folders)
